--- a/argocd/external-secrets.yaml
+++ b/argocd/external-secrets.yaml
@@ -15,4 +15,12 @@ spec:
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
-    automated: {}
+    automated:
+      prune: true
+      selfHeal: true
+    retry:
+      limit: 10
+      backoff:
+        duration: "1m"
+        factor: 2
+        maxDuration: "300m"
