chore: moving external-secrets to separate folder

--- a/external-secrets/argo.yaml
+++ b/external-secrets/argo.yaml
@@ -15,12 +15,4 @@ spec:
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
-    automated:
-      prune: true
-      selfHeal: true
-    retry:
-      limit: 10
-      backoff:
-        duration: "1m"
-        factor: 2
-        maxDuration: "300m"
+    automated: {}
